Doc edits, /info request.
